# FFmpeg-Principle

./: .gitignore  LICENSE  README.md  c_point
aformat_filter/: main.c
aformat_filter/build64/ffmpeg-n4.4.1-msvc/lib/pkgconfig/: libavdevice.pc
android/hello/app/: build.gradle
android/hello/app/src/main/: AndroidManifest.xml
android/hello/app/src/main/java/com/example/hello/: FirstActivity.kt
android/hello/app/src/main/res/values/: strings.xml
android/helloJni/: settings.gradle
android/helloJni/app/: build.gradle
android/helloJni/app/src/androidTest/java/com/example/hello/: ExampleInstrumentedTest.kt
android/helloJni/app/src/main/cpp/: CMakeLists.txt  hello.cpp
android/helloJni/app/src/main/cpp-del/: CMakeLists.txt  native-lib.cpp
android/helloJni/app/src/main/java/com/example/hello/: FirstActivity.kt
android/helloJni/app/src/main/res/values/: themes.xml
android/helloJni/app/src/main/res/values-night/: themes.xml
android/helloJni/app/src/test/java/com/example/hello/: ExampleUnitTest.kt
android/helloJni/gradle/wrapper/: gradle-wrapper.properties
av_demuxer_iterate/: main.c
av_opt_next/: av_opt_next.pro  main.c
avcodec_context/: main.c
avformat_seek_file/: avformat_seek_file.pro  main.c
avio/: avio.pro  main.c  main_write.c
avoptions/: main.c
avoptions/build64/ffmpeg-n4.4.1-msvc/share/man/man1/: ffplay.1
avpacket/: main.c
avpacket/build64/ffmpeg-n4.4.1-msvc/lib/pkgconfig/: libswresample.pc
avstring/: main.c
concat_custom/: concatdec-custom.c
decoder_use/: main.c
decoder_use/build64/ffmpeg-n4.4.1-msvc/share/man/man1/: ffplay-all.1
demuxer_args/: main.c
discard_audio/: main.c
discard_audio/build64/ffmpeg-n4.4.1-msvc/lib/pkgconfig/: libavcodec.pc  libavutil.pc
encode/: main.c
encode_args/: main.c
encode_args/build64/ffmpeg-n4.4.1-msvc/lib/pkgconfig/: libavformat.pc  libswscale.pc
error_code/: error_code.pro  main.c
error_code/build64/ffmpeg-n4.4.1-msvc/lib/pkgconfig/: libpostproc.pc
fifobuffer/: main.c
format_filter/: main.c
functions/: main.c
input/: input.pro  main.c  reduce.c
input_2/: ffmpeg.def  input_2.pro  main.c
java_demo/: Hello.java  Main.java
java_demo/MyLib/: MyMath.java
log/: log.pro  main.c
output/: main.c
overlay-simple/: main.c  overlay-simple.pro
overlay-simple/build64/ffmpeg-n4.4.1-msvc/lib/pkgconfig/: libavfilter.pc
scale/scale-1/: main.c
scale/scale-2/: main.c  scale-2.pro
scale/scale-3/: main.c  scale-3.pro
split/split-1/: main.c  split-1.pro
split/split-simple/: main.c
swr_convert/: main.c
sws_scale/sws_scale_1/: main.c
sws_scale/sws_scale_1/build64/ffmpeg-n4.4.1-msvc/lib/: avutil-56.def
sws_scale/sws_scale_2/: main.c  sws_scale_2.pro
thread/: main.c  thread.pro
thread/build64/ffmpeg-n4.4.1-msvc/include/: config.h
thread/build64/ffmpeg-n4.4.1-msvc/include/compat/: w32pthreads.h
videos/: juren-30s.aac
